add new analyzer authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,8 +15,10 @@ Contributed Analyzers
 ---------------------
 
 * Fortiguard : Eric Capuano
+* Hippocampe : Danni Co
 * MsgParser : Mehdi Aschy
 * OTXQuery : Eric Capuano
+* PassiveTotal : Antoine Brodin
 * PhishingInitiative : Rémi Pointel
 * PhishTank : Eric Capuano
 
