Update, sort and fix

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,21 +13,27 @@ Contributors
 * Nils Kuhnert <nils@thehive-project.org>
 * CERT Banque de France (CERT-BDF)
 
-* Adrien Barchapt
-* Andrea Garavaglia (LDO-CERT)
-* Antoine Brodin
-* Arcuri Davide (LDO-CERT)
-* Daniil Yugoslavskiy Tieto
-* Emmanuel Torquato
-* etz69
-* Eric Capuano
-* Guillaume Rousse
-* Julian Gonzalez
-* Marc-André oll Starc (EXAPROBE)
+* Rémi Allain
 * Mehdy Aschy
+* Davide Arcuri (LDO-CERT)
+* Adrien Barchapt
 * Pierre Baudry
-* Sebastien Larinier
-* Réii Pointel
+* Antoine Brodin
+* Eric Capuano
+* crackytsi
+* Marc-André Doll (Starc, by EXAPROBE)
+* etz69
+* Andrea Garavaglia (LDO-CERT)
+* Julian Gonzalez
+* Sébastien Larinier
+* Nclose
+* Robert Nixon
+* ph34tur3
+* Rémi Pointel
+* Guillaume Rousse
+* Michael Stensrud
+* Emmanuel Torquato
+* Daniil Yugoslavskiy
 
 Copyright (C) 2017-2018 Nabil Adouani
 Copyright (C) 2014-2018 Thomas Franco
