--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,7 @@ Contributors
 * Nils Kuhnert <nils@thehive-project.org>
 * CERT Banque de France (CERT-BDF)
 
+* ag-michael
 * Rémi Allain
 * Mehdy Aschy
 * Davide Arcuri (LDO-CERT)
@@ -21,19 +22,28 @@ Contributors
 * Antoine Brodin
 * Eric Capuano
 * crackytsi
+* Arcuri Davide
 * Marc-André Doll (Starc, by EXAPROBE)
 * etz69
 * Andrea Garavaglia (LDO-CERT)
+* Ilya Glotov
 * Julian Gonzalez
 * Sébastien Larinier
+* Matteo Lodi
+* megan201296
+* Xavier Mertens
 * Nclose
+* nicpenning
+* Manabu Niseki
 * Robert Nixon
 * ph34tur3
+* Kyle Parrish
 * Rémi Pointel
 * Guillaume Rousse
 * Michael Stensrud
 * Emmanuel Torquato
 * Daniil Yugoslavskiy
+* Johnny Walker
 
 Copyright (C) 2017-2018 Nabil Adouani
 Copyright (C) 2014-2018 Thomas Franco
