--- a/AUTHORS
+++ b/AUTHORS
@@ -13,7 +13,6 @@ Contributors
 * Nils Kuhnert <nils@thehive-project.org>
 * CERT Banque de France (CERT-BDF)
 
-* ag-michael
 * Rémi Allain
 * Mehdy Aschy
 * Davide Arcuri (LDO-CERT)
@@ -25,25 +24,24 @@ Contributors
 * Arcuri Davide
 * Marc-André Doll (Starc, by EXAPROBE)
 * etz69
+* Matt Erasmus
 * Andrea Garavaglia (LDO-CERT)
-* Ilya Glotov
 * Julian Gonzalez
 * Sébastien Larinier
 * Matteo Lodi
-* megan201296
+* Nicolas Mattiocco
 * Xavier Mertens
 * Nclose
-* nicpenning
 * Manabu Niseki
 * Robert Nixon
 * ph34tur3
 * Kyle Parrish
 * Rémi Pointel
 * Guillaume Rousse
+* Gabriel Antonio da Silva
 * Michael Stensrud
 * Emmanuel Torquato
 * Daniil Yugoslavskiy
-* Johnny Walker
 
 Copyright (C) 2017-2019 Nabil Adouani
 Copyright (C) 2014-2019 Thomas Franco
