--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,7 @@
 * brandon@backscatter.io
 * Brandon Dixon (9bplus)
 * Brian Laskowski
+* CERT Arkéa 
 * CERT-BDF
 * CERT-LaPoste
 * CERT-LDO
@@ -38,6 +39,7 @@
 * Guillaume Rousse
 * Ignacio Rodriguez Paez
 * iosonogio, dadokkio
+* Joe Lazaro
 * Joel Snape @ Nettitude
 * Joe Vasquez
 * KAPSCH-CDC
